# web-scraper

./: README.md  pyproject.toml  scraper.py
tests/: test_scraper.py
