[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["ALAN KARLO MANGUBAT <karlomangubat92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
